src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Dollar_Estimate_High__c</fullName>
        <description>High dollar estimate for opportunity</description>
        <label>Dollar Estimate (High)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dollar_Estimate_Low__c</fullName>
        <description>Low dollar estimate for opportunity</description>
        <label>Dollar Estimate (Low)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dollar_Estimate_Medium__c</fullName>
        <label>Dollar Estimate (Medium)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Factor__c</fullName>
        <formula>Account.Factor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Factor</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ship_To_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To Location</label>
        <referenceTo>Ship_To_Location__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Dollar_Estimate_High_Less_Than_Zero</fullName>
        <active>true</active>
        <description>Ensure the dollar estimate high is not less than 0</description>
        <errorConditionFormula>NOT(ISBLANK(Dollar_Estimate_High__c)) &amp;&amp;
  Dollar_Estimate_High__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Dollar_Estimate_High__c</errorDisplayField>
        <errorMessage>The Dollar Estimate (High) cannot be less than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dollar_Estimate_Low_Less_Med_and_High</fullName>
        <active>true</active>
        <description>Ensure the dollar estimate low is less than the medium and high</description>
        <errorConditionFormula>NOT(ISBLANK(Dollar_Estimate_Low__c)) &amp;&amp;
((NOT(ISBLANK(Dollar_Estimate_Medium__c)) &amp;&amp;
  Dollar_Estimate_Low__c &gt; Dollar_Estimate_Medium__c) ||
((NOT(ISBLANK(Dollar_Estimate_High__c)) &amp;&amp;
  Dollar_Estimate_Low__c &gt; Dollar_Estimate_High__c)))</errorConditionFormula>
        <errorDisplayField>Dollar_Estimate_Low__c</errorDisplayField>
        <errorMessage>The Dollar Estimate (Low) cannot be more than the Dollar Estimate (Medium) or Dollar Estimate (High)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dollar_Estimate_Low_Less_Than_Zero</fullName>
        <active>true</active>
        <description>Ensure the dollar estimate low is not less than 0</description>
        <errorConditionFormula>NOT(ISBLANK(Dollar_Estimate_Low__c)) &amp;&amp;
  Dollar_Estimate_Low__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Dollar_Estimate_Low__c</errorDisplayField>
        <errorMessage>The Dollar Estimate (Low) cannot be less than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dollar_Estimate_Med_Less_Than_Zero</fullName>
        <active>true</active>
        <description>Ensure the dollar estimate medium is not less than 0</description>
        <errorConditionFormula>NOT(ISBLANK(Dollar_Estimate_Medium__c)) &amp;&amp;
  Dollar_Estimate_Medium__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Dollar_Estimate_Medium__c</errorDisplayField>
        <errorMessage>The Dollar Estimate (Medium) cannot be less than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dollar_Estimate_Med_More_High</fullName>
        <active>true</active>
        <description>Ensure the dollar estimate medium is less than high</description>
        <errorConditionFormula>NOT(ISBLANK(Dollar_Estimate_Medium__c)) &amp;&amp;
((NOT(ISBLANK(Dollar_Estimate_High__c)) &amp;&amp;
  Dollar_Estimate_Medium__c &gt; Dollar_Estimate_High__c))</errorConditionFormula>
        <errorDisplayField>Dollar_Estimate_Medium__c</errorDisplayField>
        <errorMessage>The Dollar Estimate (Medium) cannot be more than the Dollar Estimate (High)</errorMessage>
    </validationRules>
</CustomObject>